# pico-examples

./: CMakeLists.txt  README.md
nonsecure/: CMakeLists.txt
nonsecure/hello_trustzone/: CMakeLists.txt  nonsecure.c  secure.c
nonsecure/wifi_tls_verify/: CMakeLists.txt  memmap_ns.ld  memmap_s.ld  nonsecure.c  private.pem  pt.json  secure.c
test_hello_world_usb/hello_usb/: hello_usb.c
test_hid_composite/dev_hid_composite/: usb_descriptors.c
test_uart/hello_uart/: CMakeLists.txt  hello_uart.c  hello_uart.h  usb_descriptors.c
trustzone/hello_trustzone/: CMakeLists.txt  nonsecure.c  secure.c  secure_call_user_callbacks.h
trustzone/wifi_tls_verify/: CMakeLists.txt  nonsecure.c  secure.c
